Edited css in  work, about and  skills folder to fix margin alignment

--- a/src/pages/Skills/Skills.css
+++ b/src/pages/Skills/Skills.css
@@ -15,6 +15,7 @@
         border-color: #243386;
         border-radius: 20px;
         padding: 1rem;
+        margin-left: 1rem;
         
         transition: transform 0.3s ease, box-shadow 0.3s ease;
         
