--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -7,7 +7,7 @@
 
 
 .para-container {
-    margin-left: 2rem;
+    margin-left: 3rem;
     max-width: 700px;
 }
 
